--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://vasylbritva.github.io/pokedexx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://vasylbritva.github.io/pokedexx"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
